fix(print-styles): reduce bottom padding for print layout to improve alignment

--- a/css/globals.css
+++ b/css/globals.css
@@ -437,7 +437,7 @@ PRINT STYLES
     display: flex;
     justify-content: center;
     align-items: flex-end; /* This correctly aligns the item to the bottom */
-    padding-bottom: .25in;
+    padding-bottom: .125in;
     overflow: hidden;
     box-sizing: border-box;
 }
